--- a/style/hero.css
+++ b/style/hero.css
@@ -4,8 +4,15 @@
     display: flex;
     flex-direction: column;
 }
+.Hero-Container h1 {
+    font-weight: 700;
+    font-size: 52px;
+}
 .Hero-Container h1 span {
     color: red;
+}
+.subHeading {
+    font-
 }
 
 
