--- a/style/hero.css
+++ b/style/hero.css
@@ -3,6 +3,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    font-family: 'Poppins', sans-serif;
 }
 .Hero-Container h1 {
     font-weight: 700;
@@ -12,7 +13,9 @@
     color: red;
 }
 .subHeading {
-    font-
+    font-size : 18px;
+    font-family: 'Inter', sans-serif;
+    color: #6A707D;
 }
 
 
