--- a/style/content.css
+++ b/style/content.css
@@ -1,5 +1,6 @@
 .content {
     width: 100%;
+    margin-top: 60px;
 }
 .card-container{
     width: 80%;
@@ -7,17 +8,22 @@
     display: flex;
     justify-content: space-between;
 }
-
-
 .card{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    width: 402px;
+    width: 400px;
     height: 560px;
+    margin-bottom: 72px;
 }
+
 .card p{
     color: #fff;
     margin-bottom: 52px;
     margin-left: 32px;
+    font-family: "Poppins", san;
+}
+
+.card-content{
+    border-radius: 32px;
 }
