--- a/style/content.css
+++ b/style/content.css
@@ -1,11 +1,13 @@
 .content {
     width: 100%;
+    
 }
 .card-container{
     width: 80%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    gap: 1rem;
+    
 }
 
 
