--- a/style/readingpost.css
+++ b/style/readingpost.css
@@ -1,11 +1,15 @@
-.ReadingPost-Container {
+/* .ReadingPost-Container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
 
 }
 
 .Card-Container {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
+    padding: 5px 20px;
+    background-color: gray;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -15,11 +19,15 @@
 .Card-Container .cardhiji {
     border-radius: 24px;
     display: flex;
+    flex-direction: column;
     gap: 1.5rem;
-    max-width: 700px;
     padding: 15px;
     background-color: white;
     border: 3px solid #EAECF2;
+}
+
+.Card-Container .cardhiji img {
+    width: auto;
 }
 
 .Card-Container .location {
@@ -66,6 +74,10 @@
     color: black;
 }
 
+.ReadingPost-Container .Judul {
+    text-align: center;
+    padding: 20px 0;
+}
 
 
 
@@ -84,12 +96,16 @@
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
     .Card-Container {
+        width: 80%;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         height: 40vh;
     }
-}
+    .Card-Container .cardhiji {
+        flex-direction: row;
+    }
+} */
