--- a/style/content.css
+++ b/style/content.css
@@ -35,9 +35,10 @@
 }
 .arrow {
     padding:40% 0;
-    cursor: pointer;
 }
-.arrow a{
-    color: #232529;
+.arrow button{
+    background-color: transparent;
+    border: none;
     font-weight: 500;
+    cursor: pointer;
 }
