--- a/style/content.css
+++ b/style/content.css
@@ -6,7 +6,7 @@
     width: 80%;
     margin: 0 auto;
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
     
 }
 .card{
@@ -23,22 +23,23 @@
     margin-bottom: 52px;
     margin-left: 32px;
     font-family: "Poppins", sans-serif;
-}
-
-.card-content{
-    border-radius: 32px;
-    margin-right:24px;
-}
-.right{
-    display: flex;
     
 }
-.arrow {
-    padding:40% 0;
+
+
+@media (max-width: 768px){
+    
+    .card-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .card{
+        width: 350px;
+        height: 480px;
+    }
+    
 }
-.arrow button{
-    background-color: transparent;
-    border: none;
-    font-weight: 500;
-    cursor: pointer;
-}
+
+
+
