--- a/style/hero.css
+++ b/style/hero.css
@@ -100,6 +100,12 @@
         margin: 0;
         flex-direction: column;
     }
+    .heading h1{
+        font-size:26px;
+    }
+    .subHeading{
+        font-size:16px;
+    }
     .iconInfo{
         flex-direction:column;
     }
@@ -109,9 +115,10 @@
     }
     .tombol{
         margin:0;
+        margin-left: 10px;
         display:flex;
         flex-direction:column;
-        text-align:center;
+        
     }
     .start{
         margin-bottom:12px;
@@ -123,7 +130,6 @@
         border-radius: 24px;
         height: 300px; 
         width: 300px;
-    
     }
     .arrow{
         margin:15% 0;
