--- a/style/whychoose.css
+++ b/style/whychoose.css
@@ -51,7 +51,18 @@
         justify-content: center;
         align-items: center;
     }
+    
 
+
+}
+@media (max-width: 768px) {
+    .whychoose-content .text h1 {
+        font-size: 20px;
+    }
+    .whychoose-content .text p {
+        font-size: 14px;
+    }
+    
 
 
 }
