--- a/style/articleHome.css
+++ b/style/articleHome.css
@@ -18,13 +18,16 @@
 }
 
 
+.titleaddedpost h2 {
+    text-align: center;
+    margin-top: 20px;
+}
 
 
 
 
 
-
-@media (min-width: 700px) {
+@media (min-width: 900px) {
     .PesonaGunung .Container {
         width: 80%;
         margin: 0 auto;
@@ -36,6 +39,7 @@
     }
     .PesonaGunung .Container .img img {
         width: 100%;
+        max-width: fit-content;
     }
     .PesonaGunung .Container .img{
         width: 80%;
@@ -43,36 +47,17 @@
     }
 }
 
-
-
 .addedpost-container {
-    width: 100%;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: justify;
-}
-
-.addedpost-container .addedpost .img {
-    width: 100%;
-}
-
-.addedpost-container .addedpost .img img {
-    width: 100%;
-}
-
-.addedpost-container .addedpost {
     display: flex;
     flex-direction: column;
 }
 
-@media (min-width: 700px) {
+
+
+
+
+@media (min-width: 900px) {
     .addedpost-container {
-        width: 80%;
-        margin: 0 auto;
         flex-direction: row;
     }
 }
