--- a/style/hero.css
+++ b/style/hero.css
@@ -43,6 +43,7 @@
 
 .arrow {
     padding:40% 0;
+    margin-right: 29px;
 }
 .arrow button{
     background-color: transparent;
@@ -53,14 +54,16 @@
 
 .start{
     color: #fff;
-    background-color: #4C5EFF;
+    background-color: #FF4C4C;
     padding: 14px 32px;
     border-radius: 32px;
 }
 .see{
-    border:1px solid #4C5EFF;
+    color: #232529;
+    border:1px solid #232529;
     padding: 14px 32px;
     border-radius: 32px;
+    margin-left: 18px;
 }
 .tombol{
     margin-bottom: 60px;
@@ -72,21 +75,7 @@
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
     .Hero-Container {
         width: 80%;
         margin: 0 auto;
@@ -95,8 +84,9 @@
 
 }
 @media (max-width: 768px) {
+    
     .Hero-Container {
-        width: 80%;
+        width: 100%;
         margin: 0;
         flex-direction: column;
     }
@@ -118,21 +108,17 @@
         margin-left: 10px;
         display:flex;
         flex-direction:column;
+        text-align: center;
         
     }
     .start{
-        margin-bottom:12px;
+        margin-bottom: 16px;
     }
-    .slideshow{
-        margin-top:24px;
+    .see{
+        margin-left: 0%;
     }
-    .Slide img{
-        border-radius: 24px;
-        height: 300px; 
-        width: 300px;
-    }
-    .arrow{
-        margin:15% 0;
+    .right{
+        display: none;
     }
     
 }
