--- a/style/search.css
+++ b/style/search.css
@@ -14,8 +14,17 @@
 
 .Search-Container .Heading {
     color: white;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
+
+.Search-Container .Heading p {
+    color: white;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
     text-align: center;
 }
 
