--- a/style/footer.css
+++ b/style/footer.css
@@ -1,11 +1,12 @@
 .Footer-Border {
     border-top: 2px solid #EAECF2;
+    padding-bottom: 36px;
 }
 
 .Footer-Container {
     width: 80%;
     margin: 0 auto;
-    padding: 30px 30px;
+    padding: 32px 30px;
     padding-top: 60px;
     display: grid;
     gap: 1rem;
