--- a/style/navbar.css
+++ b/style/navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 32px;
 }
 
 .Navbar-Container ul li a {
@@ -72,6 +72,7 @@
 .logo h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
+    color: #232529;
 }
 .logo h1 span {
     color: red;
@@ -81,7 +82,7 @@
     display: none;
 }
 .linkItem {
-    font-size:20px;
+    font-size:16px;
 }
 
 
