--- a/style/whychoose.css
+++ b/style/whychoose.css
@@ -1,4 +1,5 @@
 .whychoose-container {
+    padding: 32px 0;
     width: 100%;
     background-color: #F8F9FC;
 }
@@ -29,8 +30,10 @@
 
 .whychoose-content .text p {
     font-family: 'Inter', sans-serif;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    line-height: 28px;
     font-weight: 500;
     color: #6A707D;
 }
